@@ -1,3 +1,7 @@
+2007-03-14  Ian Lance Taylor  <iant@google.com>
+
+	* tree-vrp.c (value_inside_range): Ignore fold warnings.
+
 2007-03-13  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
 
 	PR target/31123
